--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <h1>Brooks Slaski's CSCE 190 Site</h1>
 
         <section class="assignment">
-            <a href="C:\Users\brook\OneDrive\Desktop\190\files\CSCE190 Problem Statement.pdf">
-            <img src="C:\Users\brook\OneDrive\Desktop\190\images\problemstatement1.png">
+            <a href="files/CSCE190 Problem Statement.pdf">
+            <img src="images/problemstatement1.png">
             <section class="ass-details">
-                <a href="C:\Users\brook\OneDrive\Desktop\190\files\CSCE190 Problem Statement.pdf"><h2> Problem Statement: Safe Drinking</h2></a>
+                <a href="files/CSCE190 Problem Statement.pdf"><h2> Problem Statement: Safe Drinking</h2></a>
                 <p>
                     Young adults often don’t know their drinking tolerance. Coming into a new environment and not being familiar with how much you can drink without going too far is a big problem. People end up drinking way too much and end up throwing up, or even in the hospital. Our solution should provide users with a way to easily track how much they have drank and how much they can drink without going too far.
                 </p>
