--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Brooks Slaski's CSCE 190 Site</h1>
-
+<!--Problem Statement Assignment-->
         <section class="assignment">
             <a href="files/CSCE190 Problem Statement.pdf">
             <img src="images/problemstatement1.png">
@@ -16,5 +16,18 @@
                 </p>
             </section>
         </section>
+
+<!--Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="files/CSCE190 Affinity Diagram.pdf">
+            <img src="images/AffinityDiagram.png">
+            <section class="ass-details">
+                <a href="files/CSCE190 Affinity Diagram.pdf"><h2> Affinity Diagram: Safe Drinking</h2></a>
+                <p>
+                    All of the ideas that my group and I brainstormed for our safe drinkning app.
+                </p>
+            </section>
+        </section>
+
     </body>
 </html>
