--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 <!--Affinity Diagram Assignment-->
         <section class="assignment">
-            <a href="files/CSCE190 AffinityDiagrams.pdf">
-            <img src="images/affinitydiagram2.png">
+            <a href="files/CSCE190 AffinityDiagram2.pdf">
+            <img src="images/AffinityDiagrams1.png">
             <section class="ass-details">
-                <a href="files/CSCE190 AffinityDiagrams.pdf"><h2> Affinity Diagram: Safe Drinking</h2></a>
+                <a href="files/CSCE190 AffinityDiagram2.pdf"><h2> Affinity Diagram: Safe Drinking</h2></a>
                 <p>
                     All of the ideas that my group and I brainstormed for our safe drinkning app.
                 </p>
