--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>CSCE:190 Brooks Slaski</title>
+        <title>CSCE:190 Brooks Slaski</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Brooks Slaski's CSCE 190 Site</h1>
