--- a/index.html
+++ b/index.html
@@ -30,5 +30,16 @@
             </section>
         </section>
 
+        <!--Persona Assignment-->
+        <section class="assignment">
+            <a href="files/CSCE190 5 Personas.pdf">
+            <img src="images/Persona1.png">
+            <section class="ass-details">
+                <a href="files/CSCE190 5 Personas.pdf"><h2> Persona: Brant Cusack</h2></a>
+                <p>
+                    A persona of a potenital user for our safe drinkning app.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
