--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
         <!--Persona Assignment-->
         <section class="assignment">
-            <a href="files/CSCE190 5 Personas.pdf">
+            <a href="files/CSCE190 5 Personas1.pdf">
             <img src="images/Persona1.png">
             <section class="ass-details">
-                <a href="files/CSCE190 5 Personas.pdf"><h2> Persona: Brant Cusack</h2></a>
+                <a href="files/CSCE190 5 Personas1.pdf"><h2> Persona: Brant Cusack</h2></a>
                 <p>
                     A persona of a potenital user for our safe drinkning app.
                 </p>
