--- a/index.html
+++ b/index.html
@@ -41,5 +41,17 @@
                 </p>
             </section>
         </section>
+
+         <!--Story Board Assignment-->
+         <section class="assignment">
+            <a href="files/Storyboard (1).pdf">
+            <img src="images/Storyboard.png">
+            <section class="ass-details">
+                <a href="files/Storyboard (1).pdf"><h2> Storyboard: Brant Cusack Goes to Bar with Friends</h2></a>
+                <p>
+                    A storyboard of a potenital user using our safe drinkning app.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
