--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          <!--Story Board Assignment-->
          <section class="assignment">
             <a href="files/Storyboard (1).pdf">
-            <img src="images/Storyboard.png">
+            <img src="images/StoryBoard2.png">
             <section class="ass-details">
                 <a href="files/Storyboard (1).pdf"><h2> Storyboard: Brant Cusack Goes to Bar with Friends</h2></a>
                 <p>
