--- a/index.html
+++ b/index.html
@@ -53,5 +53,17 @@
                 </p>
             </section>
         </section>
+
+         <!--Story Board Assignment-->
+           <section class="assignment">
+               <a href="files/Team Sketches.pdf">
+               <img src="images/sketch.png">
+               <section class="ass-details">
+                    <a href="files/Team Sketches.pdf"><h2> Sketches</h2></a>
+                    <p>
+                       Sketches of how our drinkning app could potentially look.
+                    </p>
+                </section>
+            </section>
     </body>
 </html>
