--- a/index.html
+++ b/index.html
@@ -6,64 +6,69 @@
     </head>
     <body>
         <h1>Brooks Slaski's CSCE 190 Site</h1>
-<!--Problem Statement Assignment-->
-        <section class="assignment">
-            <a href="files/CSCE190 Problem Statement.pdf">
-            <img src="images/problemstatement1.png">
-            <section class="ass-details">
+<div class="assignments">
+        <!--Problem Statement Assignment-->
+            <section class="assignment">
                 <a href="files/CSCE190 Problem Statement.pdf"><h2> Problem Statement: Safe Drinking</h2></a>
-                <p>
-                    Young adults often don’t know their drinking tolerance. Coming into a new environment and not being familiar with how much you can drink without going too far is a big problem. People end up drinking way too much and end up throwing up, or even in the hospital. Our solution should provide users with a way to easily track how much they have drank and how much they can drink without going too far.
-                </p>
-            </section>
-        </section>
-
-<!--Affinity Diagram Assignment-->
-        <section class="assignment">
-            <a href="files/CSCE190 AffinityDiagrams5.pdf">
-            <img src="images/AffinityDiagram5.png">
-            <section class="ass-details">
-                <a href="files/CSCE190 AffinityDiagrams5.pdf"><h2> Affinity Diagram: Safe Drinking</h2></a>
-                <p>
-                    All of the ideas that my group and I brainstormed for our safe drinkning app.
-                </p>
-            </section>
-        </section>
-
-        <!--Persona Assignment-->
-        <section class="assignment">
-            <a href="files/190Personas (5).pdf">
-            <img src="images/Persona1.png">
-            <section class="ass-details">
-                <a href="files/190Personas (5).pdf"><h2> Persona: Brant Cusack</h2></a>
-                <p>
-                    A persona of a potenital user for our safe drinkning app.
-                </p>
-            </section>
-        </section>
-
-         <!--Story Board Assignment-->
-         <section class="assignment">
-            <a href="files/Storyboard (1).pdf">
-            <img src="images/Screenshot 2022-10-19 161726.png">
-            <section class="ass-details">
-                <a href="files/Storyboard (1).pdf"><h2> Storyboard: Brant Cusack Goes to Bar with Friends</h2></a>
-                <p>
-                    A storyboard of a potenital user using our safe drinkning app.
-                </p>
-            </section>
-        </section>
-
-         <!--Story Board Assignment-->
-           <section class="assignment">
-               <a href="files/Team Sketches.pdf">
-               <img src="images/sketch.png">
-               <section class="ass-details">
-                    <a href="files/Team Sketches.pdf"><h2> Sketches</h2></a>
+                <a href="files/CSCE190 Problem Statement.pdf">
+                <img src="images/problemstatement1.png">
                     <p>
-                       Sketches of how our drinkning app could potentially look.
+                        Young adults often don’t know their drinking tolerance. Coming into a new environment and not being familiar with how much you can drink without going too far is a big problem. People end up drinking way too much and end up throwing up, or even in the hospital. Our solution should provide users with a way to easily track how much they have drank and how much they can drink without going too far.
+                    </p>
+            
+            </section>
+
+    <!--Affinity Diagram Assignment-->
+            <section class="assignment">
+                <a href="files/CSCE190 AffinityDiagrams5.pdf"><h2> Affinity Diagram: Safe Drinking</h2></a>
+                <a href="files/CSCE190 AffinityDiagrams5.pdf">
+                <img src="images/AffinityDiagram5.png">
+                    <p>
+                        All of the ideas that my group and I brainstormed for our safe drinkning app.
                     </p>
                 </section>
             </section>
+
+            <!--Persona Assignment-->
+            <section class="assignment">
+                <a href="files/190Personas (5).pdf"><h2> Persona: Brant Cusack</h2></a>
+                <a href="files/190Personas (5).pdf">
+                <img src="images/Persona1.png">
+                    <p>
+                        A persona of a potenital user for our safe drinkning app.
+                    </p>
+                </section>
+
+            <!--Story Board Assignment-->
+            <section class="assignment">
+                <a href="files/Storyboard (1).pdf"><h2> Storyboard: Brant Cusack Goes to Bar with Friends</h2></a>
+                <a href="files/Storyboard (1).pdf">
+                <img src="images/Screenshot 2022-10-19 161726.png">
+                    <p>
+                        A storyboard of a potenital user using our safe drinkning app.
+                    </p>
+                </section>
+
+            <!--Story Board Assignment-->
+            <section class="assignment">
+                <a href="files/Team Sketches (1).pdf"><h2> Sketches</h2></a>
+                <a href="files/Team Sketches (1).pdf">
+                <img src="images/sketch.png">
+                        <p>
+                        Sketches of how our drinkning app could potentially look.
+                        </p>
+                    </section>
+
+                <!--High-fi Prototype Assignment-->
+
+                <section class="assignment">
+                    <a href="Watch Your Sip-html (3)/src/index.html"><h2> High-Fi Protoype: Watch your Sip</h2></a>
+                    <a href="Watch Your Sip-html (3)/src/index.html">
+                    <img src="images/Screenshot 2022-11-16 234826.png">
+                            <p>
+                                Scenario of how things would look on our app.
+                            </p>
+                        </section>
+            </div>
     </body>
 </html>
