--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <!--Problem Statement Assignment-->
             <section class="assignment">
                 <a href="files/CSCE190 Problem Statement.pdf"><h2> Problem Statement: Safe Drinking</h2></a>
-                <a href="files/CSCE190 Problem Statement.pdf"></a>
-                <img src="images/problemstatement1.png">
+                <a href="files/CSCE190 Problem Statement.pdf">
+                <img src="images/problemstatement1.png"></a>
                     <p>
                         Young adults often don’t know their drinking tolerance. Coming into a new environment and not being familiar with how much you can drink without going too far is a big problem. People end up drinking way too much and end up throwing up, or even in the hospital. Our solution should provide users with a way to easily track how much they have drank and how much they can drink without going too far.
                     </p>
@@ -21,8 +21,8 @@
     <!--Affinity Diagram Assignment-->
             <section class="assignment">
                 <a href="files/CSCE190 AffinityDiagrams5.pdf"><h2> Affinity Diagram: Safe Drinking</h2></a>
-                <a href="files/CSCE190 AffinityDiagrams5.pdf"></a>
-                <img src="images/AffinityDiagram5.png">
+                <a href="files/CSCE190 AffinityDiagrams5.pdf">
+                <img src="images/AffinityDiagram5.png"></a>
                     <p>
                         All of the ideas that my group and I brainstormed for our safe drinkning app.
                     </p>
@@ -31,8 +31,8 @@
             <!--Persona Assignment-->
             <section class="assignment">
                 <a href="files/190Personas (5).pdf"><h2> Persona: Brant Cusack</h2></a>
-                <a href="files/190Personas (5).pdf"></a>
-                <img src="images/Persona1.png">
+                <a href="files/190Personas (5).pdf">
+                <img src="images/Persona1.png"></a>
                     <p>
                         A persona of a potenital user for our safe drinkning app.
                     </p>
@@ -41,8 +41,8 @@
             <!--Story Board Assignment-->
             <section class="assignment">
                 <a href="files/Storyboard (1).pdf"><h2> Storyboard: Brant Cusack Goes to Bar with Friends</h2></a>
-                <a href="files/Storyboard (1).pdf"></a>
-                <img src="images/Screenshot 2022-10-19 161726.png">
+                <a href="files/Storyboard (1).pdf">
+                <img src="images/Screenshot 2022-10-19 161726.png"></a>
                     <p>
                         A storyboard of a potenital user using our safe drinkning app.
                     </p>
@@ -51,8 +51,8 @@
             <!--Sketch-->
             <section class="assignment">
                 <a href="files/Team Sketches (1).pdf"><h2> Sketches</h2></a>
-                <a href="files/Team Sketches (1).pdf"></a>
-                <img src="images/sketch.png">
+                <a href="files/Team Sketches (1).pdf">
+                <img src="images/sketch.png"></a>
                         <p>
                         Sketches of how our drinkning app could potentially look.
                         </p>
@@ -61,8 +61,8 @@
                     <!--Prototype Assignment-->
             <section class="assignment">
                 <a href="https://www.youtube.com/watch?v=lYgRZ-lvzu8"><h2> Sketches</h2></a>
-                <a href="https://www.youtube.com/watch?v=lYgRZ-lvzu8"></a>
-                <img src="images/PaperPrototpye.png">
+                <a href="https://www.youtube.com/watch?v=lYgRZ-lvzu8">
+                <img src="images/PaperPrototpye.png"></a>
                         <p>
                             Paper scenario of how each screen would look on our app.
                         </p>
@@ -72,8 +72,8 @@
 
                 <section class="assignment">
                     <a href="Watch Your Sip-html (3)/src/index.html"><h2> High-Fi Protoype: Watch Your Sip</h2></a>
-                    <a href="Watch Your Sip-html (3)/src/index.html"></a>
-                    <img src="images/Screenshot 2022-11-16 234826.png">
+                    <a href="Watch Your Sip-html (3)/src/index.html">
+                    <img src="images/Screenshot 2022-11-16 234826.png"></a>
                             <p>
                                 Scenario of how things would look on our app.
                             </p>
