--- a/assignments/assignment1/index.html
+++ b/assignments/assignment1/index.html
@@ -1,1 +1,48 @@
-hello assignment 1
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Fotnite Website</title>
+</head>
+
+<body>
+    <h1>Fortnite is The Best</h1>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Neque ornare aenean euismod elementum. Sed enim ut sem viverra aliquet eget sit amet tellus. Eget aliquet nibh praesent tristique magna sit. Adipiscing enim eu turpis egestas pretium aenean pharetra magna ac. Ultrices gravida dictum fusce ut. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis.</p>
+
+    <h2>Fortnite Logo:</h2>
+    <img src="images/fortnite1.jpg" alt="Fortnite Logo">
+    <h2>Fortnite Map:</h2>
+    <img src="images/fortnite2.jpg" alt="Fortnite Map">
+
+    <h2>Why Fortnite is Awesome</h2>
+    <ul>
+        <li>You can play with Friends</li>
+        <li>You can build</li>
+        <li>You can get a victory royale</li>
+    </ul>
+
+    <h2>Fortnie Weapon Table</h2>
+    <table>
+        <tr>
+            <th>Weapon</th>
+            <th>Rating</th>
+        </tr>
+        <tr>
+            <td>Scar</td>
+            <td>Legendary</td>
+        </tr>
+        <tr>
+            <td>Pump</td>
+            <td>Epic</td>
+        </tr>
+        <tr>
+            <td>Pistol</td>
+            <td>Common</td>
+        </tr>
+    </table>
+
+    <h2><a href="https://www.fortnite.com/">Link to play Fortnite</a></h2>
+    <h2><a href="https://www.digitaltrends.com/gaming/how-to-play-fortnite-pc/#:~:text=1%20How%20to%20play%20Fortnite%20on%20your%20PC,Run%20Fortnite.%20...%206%20Adjust%20your%20settings.%20">How to play Fortnite</a></h2>
+</body>
