--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello brooks!
+<!DOCTYPE html>
+<html lang="en">
+<head></head>
+
+<body>
+<h1>CSCE 242: Website Applications</h1>
+<h2>Brooks Slaski</h2>
+<p>*****description goes here*****</p>
+<h2>Assignments</h2>
+<ul>
+    <li>  <a href="assignments/assignment1/index.html">Assignment 1</a></li>
+</ul>
+</body>
