--- a/assignments/assignment1/index.html
+++ b/assignments/assignment1/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Brooks Slaski  CSCE 242: Website Applications -->
 <head>
     <title>Fotnite Website</title>
 </head>
