--- a/index.html
+++ b/index.html
@@ -13,4 +13,7 @@
 <ul>
     <li>  <a href="assignments/assignment1/index.html">Assignment 1</a></li>
 </ul>
+<ul>
+    <li> <a href="assignments/assignment2/index.html">Assignment 2</a></li>
+</ul>
 </body>
