--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
 <body>
+    <div id="div">
 <h1>CSCE 242: Website Applications</h1>
-<h2>Brooks Slaski</h2>
+<h2 id="name">Brooks Slaski</h2>
 <p>Course Description: Firstly, students will utilize HTML and CSS to design the front-end of a website; 
     matching a given specification. Secondly, they will use JavaScript to add 
     functionality to their website. Lastly, they will learn to utilize node and server side 
@@ -16,4 +19,5 @@
 <ul>
     <li> <a href="assignments/assignment2/index.html">Assignment 2</a></li>
 </ul>
+</div>
 </body>
