Adding assignments 3,4,5 for 242

--- a/index.html
+++ b/index.html
@@ -4,20 +4,38 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-    <div id="div">
-<h1>CSCE 242: Website Applications</h1>
-<h2 id="name">Brooks Slaski</h2>
-<p>Course Description: Firstly, students will utilize HTML and CSS to design the front-end of a website; 
-    matching a given specification. Secondly, they will use JavaScript to add 
-    functionality to their website. Lastly, they will learn to utilize node and server side 
-    JavaScript to store and retrieve data from a server.</p>
-<h2>Assignments</h2>
-<ul>
-    <li>  <a href="assignments/assignment1/index.html">Assignment 1</a></li>
-</ul>
-<ul>
-    <li> <a href="assignments/assignment2/index.html">Assignment 2</a></li>
-</ul>
-</div>
-</body>
+    <body>
+        <header>
+            <h1>CSCE 242: Website Applications</h1>
+	        <h2 id="name">Brooks Slaski</h2>
+            <h1>Assignmsssents</h1>
+        </header>
+    <main>
+        <section class="content">
+            <div class="column">
+                <h3><a href="assignments/assignment1/index.html">Assignment 1:Basic HTML</a></h3>
+                <a href="assignments/assignment1/index.html"><img src="images/Assignment1.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create a website of a classroom appropriate topic.</p>
+            </div>
+            <div class="column">
+                <h3><a href="assignments/assignment2/index.html">Assignment 2:Basic CSS</a></h3>
+                <a href="assignments/assignment2/index.html"><img src="images/Assignment2.jpg" width="300px" height="200px"></a>
+                <p>This goal of this assignment was to create a new website that utilizies more features of html and css.</p>
+            </div>
+            <div class="column">
+                <h3><a href="assignments/assignment3/index.html">Assignment 3:Page Layout</a></h3>
+                <a href="assignments/assignment3/index.html"><img src="images/Assignment3.jpg" width="300px" height="200px"></a>
+                <p>The goal of assignment was to use flexbox and media query to recreate the given page template.</p>
+            </div>
+            <div>
+                <div class="column">
+                    <h3><a href="assignments/assignment5/index.html">Assignment 5:Recreate CSS Page</a></h3>
+                    <a href="assignments/assignment5/index.html"><img src="images/Assignment5.jpg" width="300px" height="200px"></a>
+                    <p>The goal of this assignment was to use html and css to create a website that resembles the UofSC home page layout.</p>
+                </div>
+            </div>
+        </section>
+   
+    </main>
+    </body>
+</html>
