--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
                 <a href="assignments/assignment3/index.html"><img src="images/Assignment3.jpg" width="300px" height="200px"></a>
                 <p>The goal of assignment was to use flexbox and media query to recreate the given page template.</p>
             </div>
-            <div>
                 <div class="column">
                     <h3><a href="assignments/assignment5/index.html">Assignment 5:Recreate CSS Page</a></h3>
                     <a href="assignments/assignment5/index.html"><img src="images/Assignment5.jpg" width="300px" height="200px"></a>
                     <p>The goal of this assignment was to use html and css to create a website that resembles the UofSC home page layout.</p>
+                </div>
+            
+            <div>
+                <div class="column">
+                    <h3><a href="assignments/assignment6/index.html">Assignment 6:JavaScript, Buttons, Functions, and More</a></h3>
+                    <a href="assignments/assignment6/index.html"><img src="images/Assignment6.jpg" width="300px" height="200px"></a>
+                    <p>The goal of this assignment was to recreate a given diagram using html, css, and java script.</p>
                 </div>
             </div>
         </section>
