added active button to show what exercise

--- a/assignments/assignment7/index.html
+++ b/assignments/assignment7/index.html
@@ -20,8 +20,8 @@
             <div></div>
         </div>
         <ul id="nav-items" class="hide-small">
-            <li><button id="button-exercise-one">Exercise 1</button></li>
-            <li><button id="button-exercise-two">Exercise 2</button></li>
+            <button id="button-exercise-one" class="active-button">Exercise 1</button>
+            <button id="button-exercise-two">Exercise 2</button>
         </ul>
     </nav>
 
