--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
                 <p>The goal of this assignment was to recreate a given diagram using html, css, and java script.</p>
             </div>
             <div class="column">
-                <h3><a href="assignments/assignment7/index.html"> Assignment 7 - Conditionals</a></h3>
+                <h3><a href="assignments/assignment7/index.html"> Assignment 7: Conditionals</a></h3>
                 <a href="assignments/assignment7/index.html"><img src="images/Assignment7.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to create two given tasks by using html, css and java with a focus on if statements.</p>
+            </div>
+            <div class="column">
+                <h3><a href="assignments/assignment8/index.html"> Assignment 8: Loops </a></h3>
+                <a href="assignments/assignment8/index.html"><img src="images/Assignment8.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create two given tasks by using html, css and java with a focus on Loops.</p>
             </div>
             
         </section>
