--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                 <a href="assignments/assignment8/index.html"><img src="images/Assignment8.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to create two given tasks by using html, css and java with a focus on Loops.</p>
             </div>
+            <div class="column">
+                <h3><a href="assignments/assignment9/index.html"> Assignment 9: Arrays </a></h3>
+                <a href="assignments/assignment9/index.html"><img src="images/Assignment9.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create two given tasks by using html, css and java with a focus on Arrays.</p>
+            </div>
             
         </section>
    
