added to main page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
                 <a href="assignments/assignment9/index.html"><img src="images/Assignment9.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to create two given tasks by using html, css and java with a focus on Arrays.</p>
             </div>
-            
+            <div class="column">
+                <h3><a href="projects/part1/index.html"> Project Part 1 </a></h3>
+                <a href="projects/part1/index.html"><img src="images/ProjectPart1.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create the css and html for the website</p>
+            </div>
         </section>
    
     </main>
