--- a/class/oct12/index.html
+++ b/class/oct12/index.html
@@ -11,13 +11,13 @@
             <div></div>
         </div>
         <ul id="nav-items" class="hide-small">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Pictures</a></li>
+            <li><a href="#">Dogs</a></li>
+            <li><a href="#">Are</a></li>
+            <li><a href="#">Cool</a></li>
         </ul>
     </nav>
     
-    <div class="parallax home"><h1>Welcome</h1></div>
+    <div class="parallax home"><h1>Dogs Are Cool</h1></div>
     <section class="info-section text-center">
       <p>
         Duis aute irure dolor in reprehenderit in voluptate
@@ -46,7 +46,7 @@
         </p>
       </section>
       <section class="flex1">
-        <img src="images/jasp-sleeping.jpg" />
+        <img src="img/dog.jpg" />
       </section>
     </section>
     <section class="parallax leash">
