--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	        <h2 id="name">Brooks Slaski</h2>
             <h1>Assignmsssents</h1>
         </header>
-    <main>
-        <section class="content">
+
+        <section class="assignments">
             <div class="column">
                 <h3><a href="assignments/assignment1/index.html">Assignment 1:Basic HTML</a></h3>
                 <a href="assignments/assignment1/index.html"><img src="images/Assignment1.jpg" width="300px" height="200px"></a>
@@ -58,12 +58,36 @@
                 <p>The goal of this assignment was to create two given tasks by using html, css and java with a focus on Arrays.</p>
             </div>
             <div class="column">
-                <h3><a href="projects/part1/index.html"> Project Part 1 </a></h3>
-                <a href="projects/part1/index.html"><img src="images/ProjectPart1.jpg" width="300px" height="200px"></a>
+                <h3><a href="assignments/assignment10/index.html"> Assignment 10: Classes </a></h3>
+                <a href="assignments/assignment10/index.html"><img src="images/Assignment10.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create a given task by using html, css and java with a focus on Classes.</p>
+            </div>            
+        </section>  
+
+        <section class="assignments">
+            <div class="title-project">
+                <h1>Project</h1>
+            </div>
+            <div class="column">
+                <h3><a href="exercises/IdeaPDF.pdf"> Idea </a></h3>
+                <a href="exercises/IdeaPDF.pdf"><img src="images/pdf.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to create the css and html for the website</p>
             </div>
+            <div class="column">
+                <h3><a href="projects/wireframe/index.html"> Wireframe </a></h3>
+                <a href="projects/wireframe/index.html"><img src="images/wireframe.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create the css and html for the website</p>
+            </div>
+            <div class="column">
+                <h3><a href="projects/part1/index.html"> Project Part 1 </a></h3>
+                <a href="projects/part1/index.html"><img src="images/ProjectPart1.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create the css and html for the website.</p>
+            </div>
+            <div class="column">
+                <h3><a href="projects/part2/index.html"> Project Part 2 </a></h3>
+                <a href="projects/part2/index.html"><img src="images/ProjectPart2.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to add the colors and pictures for the website.</p>
+            </div>
         </section>
-   
-    </main>
     </body>
 </html>
