--- a/projects/part2/ratings.html
+++ b/projects/part2/ratings.html
@@ -58,19 +58,19 @@
         <div id="rectangle">
             <div class="text-container">
                 <div class="first">
-                    <p>South Carolina Gamecocks vs Team Name</p>
+                    <p>South Carolina Gamecocks vs Tennessee</p>
                 </div>
                 <div class="second">
-                    <p>Date</p>
+                    <p>Sept 30</p>
                 </div>
                 <div class="third">
-                    <p>Location</p>
+                    <p>Knoxville, Tenn.</p>
                 </div>
                 <div class="fourth">
-                    <p>#/10 Rating</p>
+                    <p>3/10 Rating</p>
                 </div>
                 <div class="fifth">
-                    <p id="d-left">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    <p id="d-left">Description: As a carolina fan who had a lot of hope for this game it was looking fine at the start. This all changed at the end of the first half where our qb spencer rattler threw an interception. Sadly since that we were not able to cut it close and fell to a score of 20-41. </p>
                 </div>
             </div>
         </div>    
