--- a/projects/part2/roster.html
+++ b/projects/part2/roster.html
@@ -33,39 +33,39 @@
     <div class="content-section">
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/100x150" alt="Image">
+                <img src="img/qb.jpg" width="100px" height="150px">
             </div>
             <div class="text-container">
                 <div class="name">
-                    <p>FirstName LastName</p>
+                    <p>Spencer Rattler</p>
                 </div>
                 <div class="pos">
-                    <p>Pos.</p>
+                    <p>QB</p>
                 </div>
                 <div class="year">
-                    <p>Graduation Year</p>
+                    <p>Senior</p>
                 </div>
                 <div class="age">
-                    <p>Age</p>
+                    <p>Phoenix, AZ</p>
                 </div>
             </div>
         </div>        
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/100x150" alt="Image">
+                <img src="img/rb.jpg" width="100px" height="150px">
             </div>
             <div class="text-container">
                 <div class="name">
-                    <p>FirstName LastName</p>
+                    <p>Dakereon Joyner</p>
                 </div>
                 <div class="pos">
-                    <p>Pos.</p>
+                    <p>RB</p>
                 </div>
                 <div class="year">
-                    <p>Graduation Year</p>
+                    <p>Senior</p>
                 </div>
                 <div class="age">
-                    <p>Age</p>
+                    <p>North Charelston, SC</p>
                 </div>
             </div>
         </div>    
@@ -74,79 +74,80 @@
     <div class="content-section">
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/100x150" alt="Image">
+                <img src="img/wr2.jpg" width="100px" height="150px">
             </div>
             <div class="text-container">
                 <div class="name">
-                    <p>FirstName LastName</p>
+                    <p>Xavier Legette</p>
                 </div>
                 <div class="pos">
-                    <p>Pos.</p>
+                    <p>WR</p>
                 </div>
                 <div class="year">
-                    <p>Graduation Year</p>
+                    <p>Senior</p>
                 </div>
                 <div class="age">
-                    <p>Age</p>
+                    <p>Mullins, SC</p>
                 </div>
             </div>
-        </div>        
+        </div>
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/100x150" alt="Image">
+                <img src="img/wr.jpg" width="100px" height="150px">
             </div>
             <div class="text-container">
                 <div class="name">
-                    <p>FirstName LastName</p>
+                    <p>Antwane Wells Jr.</p>
                 </div>
                 <div class="pos">
-                    <p>Pos.</p>
+                    <p>WR</p>
                 </div>
                 <div class="year">
-                    <p>Graduation Year</p>
+                    <p>Senior</p>
                 </div>
                 <div class="age">
-                    <p>Age</p>
+                    <p>Richmond, VA</p>
                 </div>
             </div>
         </div>    
-    </div>
+    </div>        
+        
     <div class="content-section">
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/100x150" alt="Image">
+                <img src="img/db2.jpg" width="100px" height="150px">
             </div>
             <div class="text-container">
                 <div class="name">
-                    <p>FirstName LastName</p>
+                    <p>Emory Floyd</p>
                 </div>
                 <div class="pos">
-                    <p>Pos.</p>
+                    <p>DB</p>
                 </div>
                 <div class="year">
-                    <p>Graduation Year</p>
+                    <p>Freshman</p>
                 </div>
                 <div class="age">
-                    <p>Age</p>
+                    <p>Marietta, GA</p>
                 </div>
             </div>
         </div>        
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/100x150" alt="Image">
+                <img src="img/db.jpg" width="100px" height="150px">
             </div>
             <div class="text-container">
                 <div class="name">
-                    <p>FirstName LastName</p>
+                    <p>DeAngelo Gibbs</p>
                 </div>
                 <div class="pos">
-                    <p>Pos.</p>
+                    <p>DB</p>
                 </div>
                 <div class="year">
-                    <p>Graduation Year</p>
+                    <p>Graduate Student</p>
                 </div>
                 <div class="age">
-                    <p>Age</p>
+                    <p>Oxford, GA</p>
                 </div>
             </div>
         </div>    
