--- a/projects/part2/tickets.html
+++ b/projects/part2/tickets.html
@@ -33,17 +33,17 @@
  
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/150x150" alt="Image">
+                <img src="img/kent.jpg" alt="Image">
             </div>
             <div class="text-container">
                 <div class="first">
-                    <p>South Carolina Gamecocks vs Team Name</p>
+                    <p>South Carolina vs Kentucky</p>
                 </div>
                 <div class="second">
-                    <p>Date</p>
+                    <p>Nov 18</p>
                 </div>
                 <div class="third">
-                    <p>Location</p>
+                    <p>Columbia, S.C.</p>
                 </div>
                 <div class="fourth">
                     <p class="columns">
@@ -58,17 +58,17 @@
         </div>    
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/150x150" alt="Image">
+                <img src="img/clem.jpg" alt="Image">
             </div>
             <div class="text-container">
                 <div class="first">
-                    <p>South Carolina Gamecocks vs Team Name</p>
+                    <p>South Carolina vs Clemson</p>
                 </div>
                 <div class="second">
-                    <p>Date</p>
+                    <p>Nov 25</p>
                 </div>
                 <div class="third">
-                    <p>Location</p>
+                    <p>Columbia, S.C.</p>
                 </div>
                 <div class="fourth">
                     <p class="columns">
