--- a/projects/part2/index.html
+++ b/projects/part2/index.html
@@ -58,21 +58,21 @@
                 <a>
                     <img src="img/helmet.jpg" width="400px" height="400px">
                     <h2>Roster</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>The University of South Carolina's football roster boasts a diverse and talented group of athletes, representing a promising mix of experienced veterans and promising newcomers. Click here to get to know them!</p>
                 </a>
             </div>
             <div class="column">
                 <a>
                     <img src="img/logo.jpg" width="400px" height="400px">
                     <h2>Rate Games</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Went to the game or watched it online? Click here to provided feedback on your thoughts about the team by rating it and giving a description on your thoughts about the gamecocks!</p>
                 </a>
             </div>
             <div class="column">
                 <a>
                     <img src="img/ticket.jpg" width="400px" height="400px">
                     <h2>My Tickets</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Purchasing tickets for a University of South Carolina game is your gateway to an unforgettable college football experience. Click here to purchase tickets for yourself, as well as, your friends and family!</p>
                 </a>
             </div>
         </section>
