--- a/projects/part2/schedule.html
+++ b/projects/part2/schedule.html
@@ -34,20 +34,20 @@
     <div class="content-section">
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/150x150" alt="Image">
+                <img src="img/tenn.jpg" alt="Image">
             </div>
             <div class="text-container">
                 <div class="first">
-                    <p>South Carolina Gamecocks vs Team Name</p>
+                    <p>South Carolina vs Tennessee</p>
                 </div>
                 <div class="second">
-                    <p>Date</p>
+                    <p>Sept 30</p>
                 </div>
                 <div class="third">
-                    <p>Score</p>
+                    <p>L 20-41</p>
                 </div>
                 <div class="fourth">
-                    <p>Location</p>
+                    <p>Knoxville, Tenn.</p>
                 </div>
             </div>
         </div>   
@@ -55,20 +55,20 @@
     <div class="content-section">
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/150x150" alt="Image">
+                <img src="img/miss.jpg" alt="Image">
             </div>
             <div class="text-container">
                 <div class="first">
-                    <p>South Carolina Gamecocks vs Team Name</p>
+                    <p>South Carolina vs Mississippi State</p>
                 </div>
                 <div class="second">
-                    <p>Date</p>
+                    <p>Sept 23</p>
                 </div>
                 <div class="third">
-                    <p>Score</p>
+                    <p>W 37-30</p>
                 </div>
                 <div class="fourth">
-                    <p>Location</p>
+                    <p>Columbia, S.C.</p>
                 </div>
             </div>
         </div>   
@@ -78,17 +78,17 @@
     <div class="content-section-upcoming">
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/150x150" alt="Image">
+                <img src="img/kent.jpg" alt="Image">
             </div>
             <div class="text-container">
                 <div class="first">
-                    <p>South Carolina Gamecocks vs Team Name</p>
+                    <p>South Carolina vs Kentucky</p>
                 </div>
                 <div class="second">
-                    <p>Date</p>
+                    <p>Nov 18</p>
                 </div>
                 <div class="third">
-                    <p>Location</p>
+                    <p>Columbia, S.C.</p>
                 </div>
                 <div class="fourth">
                     <p class="columns">
@@ -103,17 +103,17 @@
     <div class="content-section-upcoming">
         <div class="rectangle">
             <div class="img-container">
-                <img src="https://via.placeholder.com/150x150" alt="Image">
+                <img src="img/clem.jpg" alt="Image">
             </div>
             <div class="text-container">
                 <div class="first">
-                    <p>South Carolina Gamecocks vs Team Name</p>
+                    <p>South Carolina vs Clemson</p>
                 </div>
                 <div class="second">
-                    <p>Date</p>
+                    <p>Nov 25</p>
                 </div>
                 <div class="third">
-                    <p>Location</p>
+                    <p>Columbia, S.C.</p>
                 </div>
                 <div class="fourth">
                     <p class="columns">
