--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                 <a href="projects/part2/index.html"><img src="images/ProjectPart2.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to add the colors and pictures for the website.</p>
             </div>
+            <div class="column">
+                <h3><a href="projects/part4/index.html"> Project Part 4 </a></h3>
+                <a href="projects/part4/index.html"><img src="images/ProjectPart4.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to add a contact me form, a data entry form , and an iframe.</p>
+            </div>
         </section>
     </body>
 </html>
