--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
                 <h3><a href="assignments/assignment10/index.html"> Assignment 10: Classes </a></h3>
                 <a href="assignments/assignment10/index.html"><img src="images/Assignment10.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to create a given task by using html, css and java with a focus on Classes.</p>
-            </div>            
+            </div>   
+            <div class="column">
+                <h3><a href="assignments/assignment10/index.html"> Assignment 11: Parsing JSON </a></h3>
+                <a href="assignments/assignment10/index.html"><img src="images/Assignment10.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create a given task parsing a JSON file, and displaying the content.</p>
+            </div>          
         </section>  
 
         <section class="assignments">
@@ -92,6 +97,11 @@
                 <h3><a href="projects/part4/index.html"> Project Part 4 </a></h3>
                 <a href="projects/part4/index.html"><img src="images/ProjectPart4.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to add a contact me form, a data entry form , and an iframe.</p>
+            </div>
+            <div class="column">
+                <h3><a href="projects/part5/index.html"> Project Part 5 </a></h3>
+                <a href="projects/part5/index.html"><img src="images/ProjectPart5.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to add a JSON file which includes informaiton that will be displayed.</p>
             </div>
         </section>
     </body>
