I forgot to push to git but can show proof of comp

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
                 <h3><a href="assignments/assignment11/index.html"> Assignment 11: Parsing JSON </a></h3>
                 <a href="assignments/assignment11/index.html"><img src="images/Assignment11.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to create a given task parsing a JSON file, and displaying the content.</p>
+            </div> 
+            <div class="column">
+                <h3><a href="https://github.com/bslaski10/node-helloworld"> Assignment 12: Code Repo </a></h3>
+                <h3><a href="https://hello-world-xaga.onrender.com/"> Assignment 12: Live Demo </a></h3>
+                <a href="https://hello-world-xaga.onrender.com/"><img src="images/Assignment12.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create a render account and a new repo for server side code.</p>
             </div>          
         </section>  
 
