--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
                 <h3><a href="https://project-9zqo.onrender.com"> Assignment 13: Live Demo </a></h3>
                 <a href="https://project-9zqo.onrender.com"><img src="images/Assignment13.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to create read server side JSON by creating a node with express.</p>
-            </div>         
+            </div>      
+            <div class="column">
+                <h3><a href="https://github.com/bslaski10/ServerGetAndPost"> Assignment 14: Code Repo </a></h3>
+                <h3><a href="https://servergetandpost.onrender.com"> Assignment 14: Live Demo </a></h3>
+                <a href="https://servergetandpost.onrender.com"><img src="images/Assignment14.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create a website with a focus on Server get and post.</p>
+            </div>     
         </section>  
 
         <section class="assignments">
