--- a/index.html
+++ b/index.html
@@ -83,8 +83,14 @@
                 <h3><a href="https://github.com/bslaski10/ServerGetAndPost"> Assignment 14: Code Repo </a></h3>
                 <h3><a href="https://servergetandpost.onrender.com"> Assignment 14: Live Demo </a></h3>
                 <a href="https://servergetandpost.onrender.com"><img src="images/Assignment14.jpg" width="300px" height="200px"></a>
-                <p>The goal of this assignment was to create a website with a focus on Server get and post.</p>
-            </div>     
+                <p>The goal of this assignment was to create a website with a focus on get and post.</p>
+            </div>   
+            <div class="column">
+                <h3><a href="https://github.com/bslaski10/ServerEditAndDelete"> Assignment 16: Code Repo </a></h3>
+                <h3><a href="https://servereditanddelete-53qj.onrender.com"> Assignment 16: Live Demo </a></h3>
+                <a href="https://servereditanddelete-53qj.onrender.com"><img src="images/Assignment16.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to create a website with a focus on edit and delete.</p>
+            </div>    
         </section>  
 
         <section class="assignments">
