--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                 <a href="https://servereditanddelete-53qj.onrender.com"><img src="images/Assignment16.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to create a website with a focus on edit and delete.</p>
             </div>    
+            <div class="column">
+                <h3><a href="https://github.com/bslaski10/ServerCRUDwMongoDB"> Assignment 17: Code Repo </a></h3>
+                <h3><a href="https://servercrudwmongodb.onrender.com"> Assignment 17: Live Demo </a></h3>
+                <a href="https://servercrudwmongodb.onrender.com"><img src="images/Assignment17.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to incorperate mongodb into the previous code.</p>
+            </div>    
         </section>  
 
         <section class="assignments">
