--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
                 <a href="projects/part5/index.html"><img src="images/ProjectPart5.jpg" width="300px" height="200px"></a>
                 <p>The goal of this assignment was to add a JSON file which includes informaiton that will be displayed.</p>
             </div>
+            <div class="column">
+                <h3><a href="https://two42-final-qnki.onrender.com/index.html"> Project Part 6: Live Demo</a></h3>
+                <h3><a href="https://github.com/bslaski10/242-final"> Project Part 6: Code Repo (main)</a></h3>
+                <h3><a href="https://github.com/bslaski10/242-final-stats">Project Part 6: Code Repo (stats) </a></h3>
+                <a href="https://two42-final-qnki.onrender.com/index.html"><img src="images/ProjectPart6.jpg" width="300px" height="200px"></a>
+                <p>The goal of this assignment was to incorperate all of the material we have learned this semester into a final project.</p>
+            </div>
         </section>
     </body>
 </html>
